k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-spring-openshift
  name: demo-spring-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-spring-openshift
  template:
    metadata:
      labels:
        app: demo-spring-openshift
    spec:
      containers:
        - image: {image}
          imagePullPolicy: Always
          name: demo-spring-openshift
          ports:
            - containerPort: 8080
              protocol: TCP
