k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-demo-app
  name: pipelines-demo-app
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pipelines-demo-app
